[package]
name = "devp2p"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
ethereum-types = "0.4"
ethkey = { path = "../parity/ethkey" }
futures = "0.1.25"
keccak-hash = "0.1"
rlp = { version = "0.3.0", features = ["ethereum"] }
rand = "0.4"
rustc-hex = "1.0"
tokio-io = "0.1.10"
tokio-tcp = "0.1.2"
